Thu Aug 30 16:50:11 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * CUTS.mwc:

          BUGFIX: The CUTS failed to include the CodeGenerationKit project
          on both Windows and non-Windows platforms.

Wed Aug 29 13:36:18 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * bin/iCCM/templates/cpp/servant/Publisher_Table_T.cpp.tmpl:

          Fixed template arguments

        * examples/iccm/Button/tao/Button.idl:
        * examples/iccm/Button/tao/Button.mpc:
        * examples/iccm/Button/tao/Button.mwc:
        * examples/iccm/Button/tao/ButtonImpl.mpc:
        * examples/iccm/Button/tao/models:

          Updated to use GME-generated files.

Wed Aug 29 13:30:09 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/ciao/BE_CIAO.mpc:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/ciao/CIAO_Generators.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/ciao/CIAO_Generators.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/ciao/CIAO_Traits.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/ciao/CIAO_Traits.inl:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/ciao/CIAO_Traits.cpp:

          Fixed the mpc generation for the interpreter to use the new TAO iCCM implementation

        * cuts/iccm/arch/tao/servant/TAO_Event.h:
        * cuts/iccm/arch/tao/servant/TAO_Servant.mpc:
        * cuts/iccm/arch/tao/servant/TAO_Servant_T.cpp:

          Fixed compilation erorrs on windows.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/ciao/CIAO_Preprocessor.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/ciao/CIAO_Proxy_Header_Traits.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/ciao/CIAO_Proxy_Header_Traits.cpp: