@@ -50,7 +50,7 @@ public:
 
 protected:
   /// The consumer connected to this publisher.
-  ::Components::TAO::EventConsumer_var consumer_;
+  ::Components::TAO_iCCM::EventConsumer_var consumer_;
 };
 
 }
