@@ -1,3 +1,15 @@
+Fri Aug 31 18:18:48 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>
+
+        * cuts/iccm/arch/tao/servant/TAO_Events.idl:
+        * cuts/iccm/arch/tao/servant/TAO_Publisher.h:
+        * cuts/iccm/arch/tao/servant/TAO_Publisher.cpp:
+        * cuts/iccm/arch/tao/servant/TAO_Publisher_T.h:
+        * cuts/iccm/arch/tao/servant/TAO_Publisher_T.cpp:
+        * cuts/iccm/arch/tao/servant/TAO_Publisher_Table_T.cpp:
+
+          Fixed compilation errors with older versions of the tao_idl
+          compiler.  Renamed TAO module to TAO_iCCM.
+
 Thu Aug 30 16:50:11 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * CUTS.mwc:
